# graph-canon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: autom.rs  canon.rs  dense.rs  lib.rs  main.rs
