[package]
name = "graph-canon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
nauty-Traces-sys = "0.3.0"
petgraph = "0.6.3"

[dev-dependencies]
criterion = "0.3"
petgraph-gen = "0.1.3"
nauty-pet = "0.8.0"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "bench"
harness = false
